<resources>
    <string name="app_name">AllinOne</string>
    <string name="button_1">Time/Date</string>
    <string name="button_2">Dialogs</string>
    <string name="button_3">Dialog 1</string>
    <string name="button_4">Dialog 2</string>
    <string name="button_5">Time Dialog</string>
    <string name="button_6">Permissions</string>
    <string name="button_7">Camera_Gallery Paths</string>
    <string name="button_8">Signature View</string>
    <string name="button_9">Voice to Text</string>
    <string name="button_10">Messaging-Socket</string>
    <string name="button_11">GPS Turn-ON</string>
    <string name="button_12">Image Crop</string>
    <string name="button_13">Login</string>
    <string name="login_register">Register</string>
    <string name="button_15">QR Codes</string>
    <string name="button_16">FingerPrint</string>
    <string name="button_17">AutoComplete</string>
    <string name="button_18">SharedPreferences</string>
    <string name="button_19">DataBase</string>
    <string name="button_20">Search Filter</string>
    <string name="button_21">Recycler Views</string>
    <string name="button_22">Random Features</string>
    <string name="button_23">Stepper Layout</string>
    <string name="button_24">UI Components</string>
    <string name="button_25">Maps</string>

    <string name="none">none</string>
    <string name="types_of_date_time">Types of Date and Time</string>
    <string name="types_of_dialogs">Types of Dialogs</string>
    <string name="dialogs1">Dialog from Utils</string>
    <string name="dialogs2">Date Dialog</string>
    <string name="dialogs3">Dialog with EditText</string>
    <string name="dialogs4">Dialog from class</string>
    <string name="upload_images">Uploads</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera</string>
    <string name="storage">Storage Read/Write</string>
    <string name="location">Locations</string>
    <string name="all_permissions">All Permissions</string>
    <string name="gps_location">Cont. GPS Location </string>
    <string name="GPS_update_text">GPS will update continuously at given interval which can also be changed.</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="messaging">Enter your nickname !</string>
    <string name="messaging1">Go to chat</string>
    <string name="call_permission">Call</string>
    <string name="Crop_image">From Gallery</string>
    <string name="Crop_image1">From Camera</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="Login_hint1">Password</string>
    <string name="Register_activity">Full Name</string>
    <string name="Register_activity1">Email</string>
    <string name="Register_activity2">Username</string>
    <string name="Register_activity3">Already have an account?</string>
    <string name="qr_code1">QR Code 1</string>
    <string name="qr_code2">QR Code 2</string>
    <string name="finger_print1">Using FingerPrint Manager</string>
    <string name="finger_print2">Using BioMetric</string>
    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>
    <string name="autocomplete_text">AutoComplete Text View that gives suggestions of all the digit/string based on first digit/string entered.</string>
    <string name="autocomplete_text2">AutoComplete Text View that gives suggestions of all the digit/string only if they match first digit/string entered.</string>
    <string name="recycler1">Type 1</string>
    <string name="recycler2">Type 2</string>
    <string name="recycler3">Type 3</string>
    <string name="recycler4">Type 4</string>
    <string name="recycler5">Type 5</string>
    <string name="recycler6">Type 6</string>
    <string name="recycler7">Type 7</string>
    <string name="recycler8">Type 8</string>
    <string name="recycler9">Type 9</string>
    <string name="random_features1">Delayed Handler</string>
    <string name="random_features2">Splash Screen</string>
    <string name="background1">Backgrounds colours</string>
    <string name="uiComponents1">Button Types</string>
    <string name="uiComponents2">Edit Text Types</string>


    <string-array name="auto_complete_example">
        <item>-- Selecionar parentesco --</item>
        <item>1 - Próprio</item>
        <item>2 - Mãe</item>
        <item>3 - Pai</item>
        <item>21 - Irmão</item>
        <item>4 - Portaria</item>
        <item>7 - Funcionário</item>
        <item>14 - Esposa</item>
        <item>15 - Esposo</item>
        <item>6 - Segurança</item>
        <item>16 - Recepção</item>
        <item>8 - Empregada</item>
        <item>5 - Secretário</item>
        <item>9 - Filho</item>
        <item>12 - Avô</item>
        <item>18 - Sogro</item>
        <item>10 - Tio</item>
        <item>11 - Sobrinho</item>
        <item>17 - Primo</item>
        <item>25 - Neto</item>
        <item>22 - Noivo</item>
        <item>23 - Cunhado</item>
        <item>24 - Genro</item>
        <item>13 - Procurador</item>
        <item>19 - Inquilino</item>
        <item>20 - Síndico</item>
        <item>26 - Resp. Autorizado</item>
        <item>0 - Agência</item>
        <item>51 - Caixa de Correspondência</item>
        <item>52 - Entregue Sob a Porta</item>
        <item>50 - Deixado Na Varanda</item>
        <item>53 - Garagem</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>