<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecyclerViews.RecyclerMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Types of Recycler Views"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/TenD_padding"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/TenD_padding">

        <Button
            android:id="@+id/recView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler1" />

        <Button
            android:id="@+id/recView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler2" />

        <Button
            android:id="@+id/recView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/TenD_padding">

        <Button
            android:id="@+id/recView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler4" />

        <Button
            android:id="@+id/recView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler5" />

        <Button
            android:id="@+id/recView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/TenD_padding">

        <Button
            android:id="@+id/recView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler7" />

        <Button
            android:id="@+id/recView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler8" />

        <Button
            android:id="@+id/recView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/TenD_padding"
            android:text="@string/recycler9" />
    </LinearLayout>

</LinearLayout>