<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_fullName"
            android:layout_width="@dimen/twoFiftyD_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Register_activity"
            android:layout_marginTop="@dimen/twoHundredD_padding" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="@dimen/twoFiftyD_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Register_activity1"
            android:layout_marginTop="@dimen/TenD_padding" />

        <EditText
            android:id="@+id/register_userName"
            android:layout_width="@dimen/twoFiftyD_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Register_activity2"
            android:layout_marginTop="@dimen/TenD_padding" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="@dimen/twoFiftyD_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/Login_hint1"
            android:layout_marginTop="@dimen/TenD_padding" />

        <Button
            android:id="@+id/register_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/TenD_padding"
            android:text="@string/login_register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/TenD_padding"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/Register_activity3" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#041EA3"
            android:textSize="15sp"
            android:text="@string/button_13" />

    </LinearLayout>

</RelativeLayout>