<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_1"
                    android:layout_marginStart="@dimen/twentyD_padding" />

                <Button
                    android:id="@+id/dialog_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_2"
                    android:layout_marginStart="@dimen/twentyD_padding" />

                <Button
                    android:id="@+id/upload_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/upload_images"
                    android:layout_marginStart="@dimen/twentyD_padding" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/permissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_6"
                    android:layout_marginStart="@dimen/twentyD_padding" />

                <Button
                    android:id="@+id/gps_location_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/gps_location"
                    android:layout_marginStart="@dimen/twentyD_padding" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/camera_galleryPath_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_7"
                    android:layout_marginStart="@dimen/twentyD_padding" />

                <Button
                    android:id="@+id/signatureView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/TenD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_8"
                    android:layout_marginStart="@dimen/TenD_padding" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/voice2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_9"
                    android:layout_marginStart="@dimen/twentyD_padding" />

                <Button
                    android:id="@+id/messaging_socket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/TenD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_10"
                    android:layout_marginStart="@dimen/TenD_padding" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gps_turnON"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_11"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/imageCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/TenD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_12"
                    android:layout_marginStart="@dimen/TenD_padding" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:layout_marginLeft="@dimen/TenD_padding"
                    android:text="@string/button_13"
                    android:layout_marginStart="@dimen/TenD_padding" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/qr_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twentyD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_15"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/fingerPrint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/TenD_padding"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_16"
                    android:layout_marginStart="@dimen/TenD_padding" />

                <Button
                    android:id="@+id/autoComplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:layout_marginLeft="@dimen/TenD_padding"
                    android:text="@string/button_17"
                    android:layout_marginStart="@dimen/TenD_padding" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sharedPref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_18"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/dataBase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_19"
                    android:layout_marginStart="@dimen/TenD_padding" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_20"
                    android:layout_marginStart="20dp" />

                <Button
                    android:id="@+id/recyclerViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/TenD_padding"
                    android:text="@string/button_21"
                    android:layout_marginStart="@dimen/TenD_padding" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>