<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_phoneLogin"
            android:layout_width="@dimen/twoFiftyD_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Register_activity2"
            android:layout_marginTop="@dimen/threeD_padding" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="@dimen/twoFiftyD_padding"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:hint="@string/Login_hint1"
            android:layout_marginTop="@dimen/TenD_padding" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/TenD_padding"
            android:text="@string/button_13" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/TenD_padding"
            android:text="@string/login_register" />


    </LinearLayout>

</RelativeLayout>