<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.UI.UiComponents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backgroundColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/TenD_padding"
                android:layout_marginTop="@dimen/TenD_padding"
                android:text="@string/background1" />

            <Button
                android:id="@+id/typesOfButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/TenD_padding"
                android:text="@string/uiComponents1"
                android:layout_marginStart="@dimen/TenD_padding" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editTextTypes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/TenD_padding"
                android:layout_marginTop="@dimen/TenD_padding"
                android:text="@string/uiComponents2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/TenD_padding"
                android:text="@string/none"
                android:layout_marginStart="@dimen/TenD_padding" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>